Fix header spacing

--- a/client/blog-client/src/styles/Header.css
+++ b/client/blog-client/src/styles/Header.css
@@ -1,10 +1,18 @@
 header{ 
+  background-color: var(--header);
+  width: 100%;
+}
+
+#header-cont {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  place-self: center;
   color: var(--font-light);
-  padding: 20px;
-  background-color: var(--header);
+  padding: 20px 0;
+  margin: 0 20px;
+  width: 100%;
+  max-width: 1200px;
 }
 
 .header-left {
